Add search_tags_count.
